# programming-challenge

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  static_analysis.yml
src/app/commands/: delete_account.py  insert_account.py  update_account.py
src/app/ports/input/events/: event_consumer.py
src/app/ports/output/events/: event_publisher.py
src/app/ports/output/name_comparator/: name_comparator.py
src/app/ports/output/repositories/: account_repository.py  name_repository.py
src/app/queries/: compare_name.py  get_account_by_id.py
src/app/services/: delete_account_service.py  get_accounts_service.py  insert_account_service.py  update_account_service.py
src/app/use_cases/: compare_name_use_case.py
src/domain/: error.py
src/domain/events/: account_deleted.py  account_inserted.py  account_updated.py  event.py
src/domain/model/: account.py  contact_information.py  name.py
src/domain/services/: validation_service.py
src/infrastructure/acl/dto/events/: error_event.py  integration_event.py
src/infrastructure/acl/dto/events/python_template/: account_deleted.py  account_inserted.py
src/infrastructure/acl/dto/requests/: account_dto.py  compare_name_request_dto.py  compare_name_response_dto.py  get_all_accounts_dto.py  insert_account_request_dto.py  update_account_request_dto.py
src/infrastructure/acl/translators/: account_dto_translator.py  compare_name_request_dto_translator.py  compare_name_response_dto_translator.py  delete_account_request_dto_translator.py  event_dto_translator.py  get_accounts_request_dto_translator.py  get_all_accounts_response_dto_translator.py  insert_account_request_dto_translator.py  update_account_request_dto_translator.py
src/infrastructure/adapters/input/events/: rabbit_mq_event_consumer.py
src/infrastructure/adapters/input/events/python_template/: account_inserted.py  account_not_deleted.py
src/infrastructure/adapters/input/http/: account_controller.py  application.py  health_status_controller.py  main.py  name_comparator_controller.py
src/infrastructure/adapters/input/http/utils/: utils.py
src/infrastructure/adapters/output/events/: console_event_publisher.py  rabbit_mq_event_publisher.py
src/infrastructure/adapters/output/name_comparator/: difflib_name_comparator.py  rapidfuzz_name_comparator.py
src/infrastructure/adapters/output/repositories/accounts/dict/: account_repository_dict.py
src/infrastructure/adapters/output/repositories/accounts/sqlalchemy/: account_mapper.py  account_model.py  account_repository_sqlalchemy.py
src/infrastructure/adapters/output/repositories/name/: name_repository_dict.py
src/infrastructure/config/injector/: database_module.py  events_module.py  injector.py  name_comparators_module.py  repositories_module.py
src/infrastructure/config/logs/: json_formatter.py  log_conf.yaml
src/infrastructure/config/migrations/: env.py
src/infrastructure/config/migrations/versions/: 3b8d8982adad_create_account_table.py  52f9c896dd58_create_cellphones_table.py
src/infrastructure/config/observability/correlation_id/: correlation_id.py
tests/: conftest.py
tests/it/infrastructure/adapters/input/http/: test_account_controller.py  test_name_comparator_controller.py
tests/it/infrastructure/adapters/input/http/correlation_id/: test_correlation_id.py
tests/it/infrastructure/adapters/output/repositories/accounts/dict/: test_account_repository_dict.py
tests/it/infrastructure/adapters/output/repositories/accounts/sqlalchemy/: test_account_repository_sqlalchemy.py
tests/it/infrastructure/adapters/output/repositories/name/: test_name_repository_dict.py
tests/resources/factories/domain/model/: account_factory.py  contact_information_factory.py
tests/resources/factories/infrastructure/acl/dto/: account_dto_factory.py  insert_account_request_dto_factory.py  update_account_request_dto_factory.py
tests/unit/app/services/: test_insert_account_service.py
tests/unit/app/use_cases/: test_compare_name_use_case.py
tests/unit/domain/services/: test_validation_service.py
tests/unit/infrastructure/adapters/output/name_comparator/: test_dilfflib_name_comparator.py
